# scratchpost

./: README.md  justfile  main.py  pyproject.toml  result.json  scratched-pole.gcode
inputs/1/: in.stl
scratchpole/: arguments.py  available_interests.py  data_interests.py  export.py  prusa.py
scratchpost/: __init__.py  arguments.py  available_interests.py  cli.py  data_interests.py  export.py  logfmt.py  prusa.py
settings/: pla-fila.ini  process.ini
src/: arguments.py  main.py
