[project]
name = "scratchpost"
version = "0.1.0"
description = "A straightforward CLI tool to obtain 3D object slice data using Prusa Slicer."
requires-python = ">=3.14"
dependencies = []

[project.scripts]
scratchpost = "scratchpost.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"